# libsass-python

./: .ackrc  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  _sass.c  appveyor.yml  azure-pipelines.yml  build_manylinux_wheels.py  changes.html  document.cpp  ez_setup.py  genindex.html  index.html  objects.inv  parser.cpp  py-modindex.html  pysass.c  pysass.cpp  pysassc.html  pysassc.py  release-unstable.sh  requirements-dev.txt  sass.c  sass.html  sass.py  sass_interface.cpp  sassc.html  sassc.py  sasstests.py  sassutils.html  search.html  searchindex.js  setup.cfg  setup.py  (+3 more)
.github/workflows/: main.yml
_sources/: changes.rst.txt  changes.txt  index.rst.txt  index.txt  pysassc.rst.txt  sass.txt  sassc.txt  sassutils.rst.txt  sassutils.txt
_sources/frameworks/: flask.txt
_sources/sassutils/: builder.rst.txt  wsgi.txt
_static/: documentation_options.js
docs/: Makefile  changes.rst  conf.py  index.rst  make.bat  sass.rst  sassc.1  sassutils.rst
docs/frameworks/: flask.rst
docs/sassutils/: distutils.rst  utils.rst
frameworks/: flask.html
old/: document.cpp
sassutils/: __init__.py  builder.html  builder.py  distutils.html  distutils.py  sass_types.py  utils.html  utils.py  wsgi.html  wsgi.py
test/: _f.scss  a.scss  b.sass  c.sass  c.scss  d.scss  e.scss  g.scss  h.sass
test/subdir/: _sub.scss  recur.scss
testpkg/: setup.py
testpkg/testpkg/static/css/: README
testpkg/testpkg/static/scss/: a.scss
win32/: unistd.h
