[metadata]
name = libsass
version = attr: sass.__version__
description = Sass for Python: A straightforward binding of libsass for Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://sass.github.io/libsass-python/
author = Hong Minhee
author_email = minhee@dahlia.kr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers

[options]
packages = sassutils
py_modules =
    pysassc
    sass
    sasstests
python_requires = >=3.8

[options.entry_points]
console_scripts =
    pysassc = pysassc:main
distutils.commands =
    build_sass = sassutils.distutils:build_sass
distutils.setup_keywords =
    sass_manifests = sassutils.distutils:validate_manifests

[aliases]
upload_doc = build_sphinx upload_doc
release = sdist upload build_sphinx upload_doc

[flake8]
exclude = .tox,build,dist,docs,ez_setup.py
